--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              <b>Write about a quiz/contest/ or a competition you took part in. 
 
 <br>You can begin with a general observation regarding quizzes or competitions.</b>
-
+<br>(word limit - 100)
         </p>
         
         
@@ -133,3 +133,4 @@
 
 </body>
 </html>
+
